# shell-mcp

./: Makefile  README.md  integration_test_weather.py  main.py  pyproject.toml
src/: pexpect_shell.py  shell.py  shell_mcp.py  tcl.py  trypexpect.py
tests/: test_asyncio_shell.py  test_pexpect_shell.py  test_shell.py  test_shell_mcp.py  test_tcl.py  test_weather.py
tests/integration/: test_weather.py
