[project]
name = "tcl-shell-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "mcp-server>=0.1.0",
]


# pyproject.toml
[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "integration",
]
addopts = [
    "-m", "not integration", # This ensures integration tests are skipped by default
    "--strict-markers",      # (Optional but recommended) Fails if an unregistered mark is used
]
